# phrase_flatten

./: .gitignore  PhraseFlatten  phrase_flatten.cabal
src/: Main.hs
