name:                PhraseFlatten 
version:             0.1.0.0
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8


executable PhraseFlatten
  hs-source-dirs: src
  main-is:        Main.hs

  ghc-options:    -static -O2 -Wall
  build-depends:
      base >= 4 && <= 5
    , yaml
    , bytestring
